@@ -1,12 +1,13 @@
-AUX fixwarnings.patch 862 RMD160 b7fb9bb811517198896ed2547d14844ad86fe3b6 SHA1 13c9ce6b59257bd0d3948b22e3a1c1956a63a77f SHA256 ff2bbe986fdf345e40d26ecc28e8246de40bbc0299a1e81873e15dca46499104
-DIST ladish-0.1.tar.bz2 662841 RMD160 c99840cd407bc4b15dc478da310208bba883ec07 SHA1 cd7a8ff9bf2277c03d92da3e7a12b8095a0d3d94 SHA256 ebe4fbe809bb12fe6126aff3d4bd515e89243b129b8ba13037bbfc76071017c4
-DIST ladish-0.2.tar.bz2 3110843 RMD160 12368643f33f39bc42443748dd444f69433d46c8 SHA1 0cb507bf910895dcf1e791b5004b701a554dd2bc SHA256 81508220cbcb296a7726679da912cdebb0c123ab1d09da9408c8afb1f3293504
-DIST ladish-0.3.tar.bz2 582591 RMD160 8e1921b35e3a75086dcb66c5d1f4959ff65b6641 SHA1 0ae211a0379cb44527137d41de2b92cc8e14dce7 SHA256 d7f60c94f862a0324af6fc2e2e73c60c664b5b9d28c3e428bba8c0314ca78108
-DIST ladish-1.tar.bz2 599209 RMD160 ca1fe658bbc8dd6e8885b1c6b653e7d0a1b191f3 SHA1 a60fb3a1d196bf9ae9bffd65efad9103c6b343b6 SHA256 71065961f949f472cba50b6181b184d196d59332f6e9106403a37955906776d4
-EBUILD ladish-0.1.ebuild 828 RMD160 6220909032bf7dfcb70840d2190418b88b39a5d6 SHA1 66136934e74516eb4c235e5af36b2bfc4b5e5a51 SHA256 3048aa7861d65dc07407384d08bcc49cf9a466c46990d6eccbc9aa57325954e6
-EBUILD ladish-0.2.ebuild 738 RMD160 5d8d0ced963b2a1306a384a2a4f4fbf9f429f066 SHA1 6a7978ee8beb178af139b27f08817fafa2627560 SHA256 4a06c541d6bb04bd6c3f675d750d4967a485c1607739e1e4ed510b34d10d0119
-EBUILD ladish-0.3.ebuild 993 RMD160 b46064f963b7511391547a6ca07413bbd6f466b7 SHA1 1b3586d8ebf57dd44107cefc8289c1af1d7f8550 SHA256 d15d0a4b54a6d8b8c66b26fd74ea1f57e5f5239f1525d5a4c667974bb7fca55d
-EBUILD ladish-1.ebuild 993 RMD160 6d4599ec312ae6664ac3b30454737ff53bc6edd0 SHA1 9084ae2007cff233f0585add409ca19b43459a3f SHA256 8ef3d81a65d339cd55dce2f39ca2375dd54bb781383b9e981a5ea5ff79ad0001
-EBUILD ladish-9999.ebuild 996 RMD160 a50a3332497ac2d36538b97f5b0277d8b070c99d SHA1 a1b9c208d79fd75f9bdcef80a6fcef1a01ee0234 SHA256 43a559b406bbd0c86fa60de69ddaf9e2dbd6fdb53a5f7580e9ad5b90e6b3a040
-MISC ChangeLog 519 RMD160 e34fed9933d1444c304e096c57c27bc6b643d4a5 SHA1 fcdbf5fc5150b0feea70f5dea51d7ebfef5773a4 SHA256 00b2643e3c7bbb0df512f4c1d33395d5a859214430471a3b3a088db9f95f05fa
-MISC metadata.xml 674 RMD160 9903a583182fcd44ae68e148c14975c9499e9d58 SHA1 a2146e2da1146e6bfae199a4b62b496d81dbc47b SHA256 0dd66bca7df2950190ca9a2440490b95e54075459c1f04ad89f1d5faa25c6281
+AUX fixwarnings.patch 862 SHA256 ff2bbe986fdf345e40d26ecc28e8246de40bbc0299a1e81873e15dca46499104 SHA512 34c9efbd32cdf88415f1c6d687636ae7ba62b3dc5b63096e57a2b19c33756157f2039e5ba7e5985a8ec6626f9b2a8e242808c968e5796bae8ffd77375e75c860 WHIRLPOOL b0590cd5d62c2a5b013579497c227915f492da5b3e766cb021d0b20f3dfd83ddb9796f718792322fe19d6b6e06c964049944cb4fc906e705b11c17d11d7c4a2d
+AUX ladish-1-include.patch 633 SHA256 8d0ebc16fd8bcdeac11d0ecb8c9c3f77822b199e9e27eb883a926952e1aebb0b SHA512 4ef6d5c19d2d570d518a4491ead5e074838d33604c13402ff0608a36bb1e4476e3294f31a644bb8700c62d2c4d73bd0fe15fff2a93e4c2b53e1ed771710d6a98 WHIRLPOOL 4642d387b91e57eadbbf3a728b6ee7e47d66ddab5d3035fe20392ef563c99d08fb5a094dd4456f6933433c0335250c5b774cac1879ccaa5df46a134d1a0bb5f0
+DIST ladish-0.1.tar.bz2 662841 SHA256 ebe4fbe809bb12fe6126aff3d4bd515e89243b129b8ba13037bbfc76071017c4
+DIST ladish-0.2.tar.bz2 3110843 SHA256 81508220cbcb296a7726679da912cdebb0c123ab1d09da9408c8afb1f3293504
+DIST ladish-0.3.tar.bz2 582591 SHA256 d7f60c94f862a0324af6fc2e2e73c60c664b5b9d28c3e428bba8c0314ca78108
+DIST ladish-1.tar.bz2 599209 SHA256 71065961f949f472cba50b6181b184d196d59332f6e9106403a37955906776d4 SHA512 10b321021d35655c94ef8558b32a24a650f298d97a05d5cb8119c3ee6a53059ba4a089af6c4bcc0fa5e4d6e112ced771b385e1eccc429a0b348437706c2f1c2b WHIRLPOOL ae2a4ffd8c39506b119a21e164a8cd1065a870abe4aca0019fb0387d705262dc49698950f10657c3497f62e99b52c0a277d57f188c845d8bf0c4954520844f34
+EBUILD ladish-0.1.ebuild 828 SHA256 3048aa7861d65dc07407384d08bcc49cf9a466c46990d6eccbc9aa57325954e6 SHA512 c698a79b09e064971f7fa82aeff79e523c40bbe361c1fb7268771e33031b8e92409c395654e653b18bff44796b6ef95ac0a2d5272599573305357ccfe3ac2416 WHIRLPOOL dcc20f7d0642b9291da018405737c232ebf67680d387e6b5d999f67e9d296ced52c404f41e8b1ffe83ab7791e58c7c0f7ccfdbf5795782b375b8d811c15f93b9
+EBUILD ladish-0.2.ebuild 738 SHA256 4a06c541d6bb04bd6c3f675d750d4967a485c1607739e1e4ed510b34d10d0119 SHA512 c4a22fe0c5ba7c2aaae4b477b9323f02a9409f3327a9e9bc3c615e54cdf8ae7dd8e14a263473c61dd371b0327cd9631676e7681690ca09adf20a7b82d5610747 WHIRLPOOL 62257830075e292c1edadbb56a37665dadc4efdd25adca35473361d2a428841a58cff85a08edacc3da8fb320588f8e4038dbf78fd154dc653182a5559c4cb62c
+EBUILD ladish-0.3.ebuild 993 SHA256 d15d0a4b54a6d8b8c66b26fd74ea1f57e5f5239f1525d5a4c667974bb7fca55d SHA512 aed32b4eece45ba6a632b3981ccf2e598a7199ae0e98d7442d20437112c90297c3e7d41b484292e173fa86520b9ba8edb7c3a4fb5363f23e5a912733207a862f WHIRLPOOL ff98a92d4d55cdde3c59586821ea0dba6732046ee7c107672ac861a390ad369baf2dc60a7b6d9ce294cae74a10cd0f8c237d084d35ef54079d2010355920fb07
+EBUILD ladish-1.ebuild 1404 SHA256 5c3b92f9c3d3ae5bf1b1cbd301bf1a32bb6df1b856221d5d97a98af027557eb8 SHA512 738275494de8ec6b17dc3036db1731f1bfe3a030ae6765d0c8a48282c5943bb59e625875f1f08b79ce50ca08d8558b2e10a5fcf91109c9e12a4e6c562373d4f3 WHIRLPOOL 36520d14fd1b259bc0b0a1c60d3be1e950ce5a62eb55a9f59a1de806d41e55e0783f754d2b9eaf3744bef3b42a30989aa40eff72e91c0c9717cfab30662db9e6
+EBUILD ladish-9999.ebuild 1292 SHA256 38ce571eb691b3f013516371d3813d1a4d20091138db5a8ec6dfe169e492f0fb SHA512 eba6aaf8a968adce0e212439e6397c0f924ecccd28815483e7b10c0458df51c5b025e0cecb75c7aadb5d1ad325648090f9c7a333616f1ee21438cf2734442841 WHIRLPOOL 10040c4f76131faff1bb37f5bd7946eff49caf2f9206f37e1d932cd52b0511144a9fb985ce36769097d090c836c410371cda913f22cd13a9f53508d8ec184516
+MISC ChangeLog 742 SHA256 b2c8a1e5cc246f84c8eaaaec6530608aa4c23e6409a50061a5a239e772cce8c1 SHA512 64870fcb4c98e236a397c82e2c4d65c0dd15946f885493418ca2eafb71cd01b7a143e152969294202d4e183b275946323bfad963eb5754d10382436a10aa853b WHIRLPOOL 8143467b736059bfd3910efa1a7f2b87f01b8893173081a8a5d00272495fdbeddcaaed486a0484db2bc28ddbebbecfcbe94110e458f680f51a81e8697174fb3e
+MISC metadata.xml 674 SHA256 0dd66bca7df2950190ca9a2440490b95e54075459c1f04ad89f1d5faa25c6281 SHA512 55eeb3ba5e6e6ad416ac06e3df80aad2fbaa6eac25dc307ca0d8f3ed3e87713ad890cc931c9b19a896eecf143fab54708725c4d8b30ba2ddfa5ae463d0ab9035 WHIRLPOOL 0f9873d5ad64538a1c138d1be7a9a32b870cfe45c9540d5606aee1a50393ada1a1776e09dcc1a0d4a9ffd7465f6c819ae66f84b39e364789167f10d9bfc6f999
