@@ -1,6 +1,13 @@
 # ChangeLog for media-sound/laditools
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  08 Dec 2012; Karl Lindén <lilrc@users.sourceforge.net>
+  ladish-1.ebuild, ladish-9999.ebuild:
+  Added python fixes and an additional python USE flag
+  Updated some dependencies
+  Updated EAPI
+  Updated copyright notice
 
   10 Oct 2011; Maxim Kachur <mcdebugger@duganet.ru>
   ladish-9999.ebuild:
